# compile-commands-merger

./: Cargo.toml  README.md
src/: main.rs
