[package]
name = "compile_commands_merger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
notify = "7.0.0"    
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[[bin]]
name = "compile_commands_merger"
path = "src/main.rs"